--- a/Pipfile
+++ b/Pipfile
@@ -3,18 +3,19 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
 
+[scripts]
+start = "./scripts/start.sh"
+
 [packages]
 fastapi = "==0.95.0"
-uvicorn = "==0.21.1"
+pydantic = "==1.10.7"
 pymongo = "==4.3.3"
-httptools = "==0.5.0"
-python-dotenv = "==1.0.0"
-pyyaml = "==6.0"
-uvloop = "==0.17.0"
-watchfiles = "==0.19.0"
-websockets = "==10.4"
+python-dotenv-vault = "==0.4.1"
 
 [dev-packages]
+black = "==23.3.0"
+pylint = "==2.17.2"
+uvicorn = "==0.21.1"
 
 [requires]
 python_version = "3.10"
