docs: refalctor error to proccesed

--- a/.vscode/ settings.json
+++ b/.vscode/ settings.json
@@ -5,5 +5,6 @@
 	},
 	"[shellscript][dockerfile][dotenv][hosts][jvmoptions][ignore][gitignore][properties][spring-boot-properties][azcli][bats]": {
 		"editor.defaultFormatter": "foxundermoon.shell-format"
-	}
+	},
+	"dotenv.enableAutocloaking": true
 }
