--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 __pycache__
 *.pyc
 *.pyo
+.ruff_cache
+.pytes_cache
+.mypy_cache
 
 # Binaries
 *.so
@@ -21,6 +24,3 @@ venv/
 .flaskenv*
 !.env.project
 !.env.vault
-
-# Ruff cache
-.ruff_cache
